--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -55,7 +55,7 @@
 }
 
 body {
-  background-color: #888;
+  background-color: #0E2734;
   padding:50px;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#727272;
