--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -322,3 +322,13 @@ footer {
     color:#444;
   }
 }
+
+
+img {
+margin-right: 15px; 
+margin-bottom: 8px; 
+border: 1px solid silver; 
+background: white; padding: 4px;
+border-radius: 3px;
+box-shadow: 1px 1px 3px silver; 
+}
