--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -224,6 +224,7 @@ header ul a strong {
 }
 
 section {
+  background-color: #fff;
   width:500px;
   float:right;
   padding-bottom:50px;
@@ -266,6 +267,7 @@ footer {
   }
 
   section {
+    
     border:1px solid #e5e5e5;
     border-width:1px 0;
     padding:20px 0;
