--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -327,11 +327,10 @@ footer {
 }
 
 
-tekst {
+tile1 {
 
-		margin-top: 10px;
-		margin-right: 10px;
-		margin-bottom: 10px;
-		margin-left: 10px;
+		background-color:#999;
+		margin: 2px;
+		
 	
 }
