--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -330,7 +330,10 @@ footer {
 tile1 {
 
 		background-color:#999;
-		margin: 2px;
 		
+		margin-top: 10px;
+		margin-right: 10px;
+		margin-bottom: 10px;
+		margin-left: 10px;
 	
 }
