--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -331,9 +331,7 @@ tile1 {
 
 		background-color:#999;
 		
-		margin-top: 10px;
-		margin-right: 10px;
-		margin-bottom: 10px;
-		margin-left: 10px;
+		margin: 10px;
+		
 	
 }
