--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -330,8 +330,18 @@ footer {
 tile1 {
 
 		background-color:#999;
-		
+		width:125px;
 		margin: 10px;
+		float:left;
 		
 	
+}
+tile2 {
+	
+	background-color:#303030;
+		width:125px;
+		margin: 10px;
+		float:left;
+		
+}
 }
