--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -57,9 +57,9 @@
 body {
   background-color: #0E2734;
   padding:50px;
-  fon-family: 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif;
   fon-family: 'Josefin Sans', sans-serif;
-  font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  fon: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#727272;
   font-weight:400;
 }
