--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -57,8 +57,8 @@
 body {
   background-color: #0E2734;
   padding:50px;
-  font-family: 'Lato', sans-serif;
-  fon-family: 'Josefin Sans', sans-serif;
+  fon-family: 'Lato', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   fon: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#727272;
   font-weight:400;
