--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -60,7 +60,7 @@ body {
   fon-family: 'Lato', sans-serif;
   font-family: 'Josefin Sans', sans-serif;
   fon: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#727272;
+  color:#fff;
   font-weight:400;
 }
 
