--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -361,4 +361,50 @@ tile4 {
 		float:left;
 		
 }
-
+.title.ribbon {
+ overflow: visible;
+ z-index: 0;
+}
+ 
+.title.ribbon:before {
+ background: #149e81;
+ left: .1em;
+ bottom: .9em;
+ width: 0em;
+ height: 3.5em;
+ -webkit-transform: skewY(45deg);
+ -moz-transform: skewY(45deg);
+ transform: skewY(45deg);
+ -webkit-transform-origin: 100% 100%;
+ -moz-transform-origin: 100% 100%;
+ transform-origin: 100% 100%;
+ transition: all .1s ease-in-out .5s;
+ z-index: -1;
+}
+ 
+.title.ribbon:hover:before {
+ left: -1em;
+ width: 1.1em;
+ transition-delay: 0s;
+}
+ 
+.title.ribbon:after {
+ background: rgb(24, 188, 156);
+ z-index: 2;
+ bottom: 2em;
+ left: -1em;
+ -webkit-transform: scaleX(0);
+ -moz-transform: scaleX(0);
+ transform: scaleX(0);
+ -webkit-transform-origin: 0 0;
+ -moz-transform-origin: 0 0;
+ transform-origin: 0 0;
+ transition: all .5s ease-in-out 0s;
+}
+ 
+.title.ribbon:hover:after {
+ -webkit-transform: scaleX(1);
+ -moz-transform: scaleX(1);
+ transform: scaleX(1);
+ transition-delay: .1s;
+}
